Quick fixes and updating the swagger
