# docs/swagger.json
@@ -53,7 +53,7 @@
             }
         },
         "/deleteDevice/{id}": {
-            "patch": {
+            "delete": {
                 "description": "Delete the provided device",
                 "produces": [
                     "application/json"
@@ -65,7 +65,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "device ID",
+                        "description": "device Id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -84,7 +84,7 @@
                 }
             }
         },
-        "/getDeviceById/{Id}": {
+        "/getDeviceById/{id}": {
             "get": {
                 "description": "Return a device by its id",
                 "produces": [
@@ -97,7 +97,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "device ID",
+                        "description": "device id",
                         "name": "id",
                         "in": "path",
                         "required": true
